# Adala-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  Dockerfile  launcher.py  pyproject.toml  requirements-desktop.txt  requirements-local.txt  requirements.txt
apps/api/app/: __init__.py  config.py  db.py  main.py  models.py  security.py  seed.py
apps/api/app/api/: chat.py  documents.py  events.py  model.py
apps/api/app/rag/: __init__.py  articles.py  embeddings.py  extractive.py  ingestion.py  llm.py  ocr.py  prompt.py  retriever.py  vectorstore.py
apps/desktop/: README.md  default-settings.example.json  main.cjs  package.json  preload.cjs  settings.example.json
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/[...path]/: route.ts
apps/web/components/: legal-assistant-app.tsx  pdf-viewer.tsx
apps/web/components/ui/: badge.tsx  button.tsx  input.tsx  scroll-area.tsx  textarea.tsx
apps/web/lib/: api.ts  types.ts  utils.ts
assets/seed-documents/: manifest.json
assets/seed-ocr/: seed_fa65a9e7e3ec5e0d2b46ef37_p47.txt  seed_fa65a9e7e3ec5e0d2b46ef37_p48.txt  seed_fa65a9e7e3ec5e0d2b46ef37_p49.txt
deploy/huggingface/: Dockerfile  README.md  start.sh
scripts/: build-windows-installer.ps1
