[project]
name = "adala-ai-api"
version = "1.0.0"
description = "FastAPI RAG backend for adala ai"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "python-multipart>=0.0.20",
  "pydantic-settings>=2.7.0",
  "langchain>=0.3.14",
  "langchain-community>=0.3.14",
  "langchain-chroma>=0.2.0",
  "langchain-huggingface>=0.1.2",
  "chromadb>=0.6.3",
  "sentence-transformers>=3.3.1",
  "pypdf>=5.1.0",
  "pymupdf>=1.27.2",
  "easyocr>=1.7.2",
  "pillow>=12.2.0",
  "transformers>=4.48.0",
  "accelerate>=1.2.1",
  "torch>=2.5.1",
  "orjson>=3.10.12"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
